unpackaged/main/default/objects/ACG_Master_Vehicle__c/ACG_Master_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Master Vehicle</label>
    <nameField>
        <label>Master Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Vehicle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>