unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/ACG_Vehicle_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Drive_Type__c</fullName>
    <label>Vehicle Drive Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>