unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/ACG_Vehicle_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Fuel_Type__c</fullName>
    <label>Vehicle Fuel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>