unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/ACG_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>