unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/ACG_Vehicle_Plate__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Plate__c</fullName>
    <description>As per JIRA SFI-423</description>
    <label>Vehicle Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>