unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/DRR_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>DRR_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DRR Vehicle</label>
    <type>Checkbox</type>
</CustomField>