unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Flatbed_Required__c.field-meta.xml
<CustomField>
    <fullName>Flatbed_Required__c</fullName>
    <formula>LOWER(TRIM(ACG_Vehicle_Drive_Type__c)) = LOWER(&#39;AWD&#39;) ||
LOWER(TRIM(ACG_Vehicle_Drive_Type__c)) = LOWER(&#39;4 x 4&#39;)||
LOWER(TRIM(ACG_Vehicle_Drive_Type__c ))= LOWER(&#39;4x4&#39;)||
LOWER(TRIM(ACG_Vehicle_Drive_Type__c)) = LOWER(&#39;4WD&#39;)</formula>
    <label>Flatbed Required</label>
    <type>Checkbox</type>
</CustomField>