unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Vehicle_Body_Number_of_Doors__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Body_Number_of_Doors__c</fullName>
    <label>Vehicle Body Number of Doors</label>
    <length>1</length>
    <type>Text</type>
</CustomField>