unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Vehicle_Cylinders__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Cylinders__c</fullName>
    <label>Vehicle Cylinders</label>
    <length>2</length>
    <type>Text</type>
</CustomField>