unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID__c</fullName>
    <label>Vehicle ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>