unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Vehicle_Liter__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Liter__c</fullName>
    <label>Vehicle Liter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>