unpackaged/main/default/objects/ACG_Master_Vehicle__c/fields/Vehicle_Sub_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sub_Model__c</fullName>
    <label>Vehicle Sub Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>